force-app/main/default/objects/Lead/fields/DRL_Email__c.field-meta.xml
<CustomField>
    <fullName>DRL_Email__c</fullName>
    <description>DRL - To track email of Lead RecordType records</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>