force-app/main/default/objects/Lead/fields/DRL_IsProspect__c.field-meta.xml
<CustomField>
    <fullName>DRL_IsProspect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DRL - true if record type is Prospect</description>
    <label>Is Prospect</label>
    <type>Checkbox</type>
</CustomField>