force-app/main/default/objects/Lead/fields/DRL_Source_Campaign__c.field-meta.xml
<CustomField>
    <fullName>DRL_Source_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DRL -  Lookup to source campaign which brought the customer</description>
    <label>Source Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>