force-app/main/default/objects/Lead/fields/DRL_UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>DRL_UTM_Campaign__c</fullName>
    <description>DRL - To track source campaign</description>
    <label>UTM Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>