force-app/main/default/objects/Lead/fields/DRL_UTMSource__c.field-meta.xml
<CustomField>
    <fullName>DRL_UTMSource__c</fullName>
    <description>DRL - To Track the source campaign</description>
    <label>UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>