force-app/main/default/objects/Lead/recordTypes/DRL_Lead.recordType-meta.xml
<RecordType>
    <fullName>DRL_Lead</fullName>
    <active>true</active>
    <businessProcess>Lead Process</businessProcess>
    <label>Lead</label>
</RecordType>