force-app/main/default/objects/Lead/recordTypes/DRL_Prospect.recordType-meta.xml
<RecordType>
    <fullName>DRL_Prospect</fullName>
    <active>true</active>
    <businessProcess>Prospect Process</businessProcess>
    <label>Prospect</label>
</RecordType>