force-app/main/default/objects/Lead/validationRules/CheckRunAutomation.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckRunAutomation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;DRL_Lead&apos;,
OR(
TEXT( Status )==&apos;Qualified&apos;
),
OR(
ISBLANK( TEXT(Run_Automation__c) ),
ISBLANK( TEXT(Prospect_Customer__c) )
)
)</errorConditionFormula>
    <errorMessage>Please fill &quot;Run Automation&quot; and &quot;Prospect/Customer&quot; fields and save.</errorMessage>
</ValidationRule>