force-app/main/default/objects/Lead/validationRules/DRL_ConvertedLeadStatusCannotbeUpdated.validationRule-meta.xml
<ValidationRule>
    <fullName>DRL_ConvertedLeadStatusCannotbeUpdated</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    IsConverted,
    ISCHANGED( Status ) 
)</errorConditionFormula>
    <errorMessage>Converted Lead Status Cannot be updated</errorMessage>
</ValidationRule>