force-app/main/default/objects/Lead/validationRules/Lead_should_be_related_to_Prospect.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_should_be_related_to_Prospect</fullName>
    <active>true</active>
    <errorConditionFormula>AND(   NOT(ISNULL( DRL_Prospect__c ))  , DRL_Prospect__r.RecordType.Name = &apos;Lead&apos;)</errorConditionFormula>
    <errorDisplayField>DRL_Prospect__c</errorDisplayField>
    <errorMessage>Please select Prospect type Lead</errorMessage>
</ValidationRule>